<resources>
    <string name="app_name">My Contact</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Hello World</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="count">Count</string>
    <string name="done">Done</string>
    <string name="contact">Contact List</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="visit">Visit us at:</string>
    <string name="profile">Profile</string>
    <string name="my_name">See Kwee Teck</string>
    <string name="locate_us">Locate Us</string>
    <string name="version">Version :</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sync">Sync</string>
    <string name="error_value_required">Value required</string>
    <string name="delete">Delete</string>
</resources>