<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="my.tarc.mycontact.FirstFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_AboutFragment"
            app:destination="@id/AboutFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="my.tarc.mycontact.SecondFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="my.tarc.mycontact.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/AboutFragment"
        android:name="my.tarc.mycontact.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="my.tarc.mycontact.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>